개표 결과 및 투표확인자 개표 확인 수정
