# locs-onvote-backend/routes/vote/index.js
@@ -10,8 +10,12 @@ router.post('/:election/ballot', admin.isLoginCheck, controller.setballotList)  
 router.delete('/:election/ballot/:ballot', admin.isLoginCheck, controller.deleteballotList)    // 개표확인자 삭제
 router.get('/:election/ballot/:ballot', admin.isLoginCheck, controller.getDetailballot)    // 개표확인자 
 
-router.post('/:election/result', admin.isLoginCheck, controller.setElectionCounting)          // 개별 개표
+router.get('/ballot/list', admin.isLoginCheck, controller.getElectionCounting)
 
+
+
+// router.post('/:election/result', admin.isLoginCheck, controller.setElectionCounting)          // 개별 개표
+router.post('/election/result', admin.isLoginCheck, controller.setElectionGroupCounting)          // 개별 개표
 
 
 
@@ -26,6 +30,6 @@ router.put('/date', admin.isLoginCheck, controller.putElectionAddDate)          
 
 
 router.get('/result', admin.isLoginCheck, controller.getVoteResult)             // 개표 결과
-router.get('/download', admin.isLoginCheck, controller.getVoteResultExcel)             // 개표 결과
+router.get('/download', admin.isLoginCheck, controller.getVoteResultExcel)             // 개표 결과 다운로드
 
 module.exports = router;
